k8s-markdown/yaml/8-ingress/web-ingress-weight.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-canary-b
  namespace: canary
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  rules:
    - host: canary.weng.com
      http:
        paths:
          - path: /
            backend:
              serviceName: web-canary-b
              servicePort: 80
